--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,6 +8,7 @@ ports:
 tasks:
     - init: |
         cp .env.example .env;
+        echo “” >> .env && echo “BACKEND_URL=https://3000-${GITPOD_WORKSPACE_URL:8}” >> .env &&
         pipenv install;
         mysql -u root -e "CREATE DATABASE example";
         pipenv run init;
